# helios_autoaim

./: .gitmodules  CMakeLists.txt  README.md  package.xml
.cache/clangd/index/: BaseDetector.hpp.E014BC4D68430442.idx  DetectorNode.cpp.F27A538AF66DD4CF.idx  DetectorNode.hpp.24D56FA076F7F7B4.idx
Camera/Data/: 041190120408.mvdat
autoaim_debugger/: CMakeLists.txt  package.xml
autoaim_debugger/include/autoaim_debugger/: AutoAimDebugger.hpp  VideoPublisher.hpp
autoaim_debugger/launch/: video_debug.launch.py
autoaim_debugger/src/: AutoAimDebugger.cpp  VideoPublisher.cpp
autoaim_fire_controller/: CMakeLists.txt  package.xml
autoaim_fire_controller/include/autoaim_fire_controller/: BulletSolver.hpp  FireControllerNode.hpp  TargetSolver.hpp
autoaim_fire_controller/src/: BulletSolver.cpp  FireControllerNode.cpp  TargetSolver.cpp  fire_controller_parameters.yaml
autoaim_interfaces/: CMakeLists.txt  package.xml
autoaim_interfaces/msg/: Armor.msg  Omega.msg  ReceiveData.msg
autoaim_utilities/: CMakeLists.txt  package.xml
autoaim_utilities/include/autoaim_utilities/: Armor.hpp  DetectorUtilities.hpp  KalmanFilter.hpp  NumberClassifier.hpp  Omega.hpp  PnPSolver.hpp  ProjectYaw.hpp  ThreadPool.hpp  Utilities.hpp
autoaim_utilities/src/: ExtendedKalmanFilter.cpp  KalmanFilter.cpp  NumberClassifier.cpp  Omega.cpp  PnPsolver.cpp  ProjectYaw.cpp
helios_autoaim/: CMakeLists.txt  package.xml
include/: HeliosAutoAim.hpp
include/detectors/: BaseDetector.hpp  NetArmorDetector.hpp  TraditionalArmorDetector.hpp  TraditionalEnergyDetector.hpp
include/fire_controllers/: BaseFireController.hpp  FireController.hpp
include/predictors/: ArmorPredictor.hpp  BasePredictor.hpp  EnergyPredictor.hpp
include/utilities/: Armor.hpp  CeresSolver.hpp  ExtendedKalmanFilter.hpp  KalmanFilter.hpp  LeastSquares.hpp  NumberClassifier.hpp  Omega.hpp  PnPSolver.hpp
model/: armor.onnx
src/: ArmorPredictor.cpp  CeresSolver.cpp  EnergyPredictor.cpp  ExtendedKalmanFilter.cpp  FireController.cpp  HeliosAutoAim.cpp  KalmanFilter.cpp  LeastSquares.cpp  NetArmorDetector.cpp  NumberClassifier.cpp  Omega.cpp  PnPsolver.cpp  TraditionalArmorDetector.cpp  TraditionalEnergyDetector.cpp  helios_autoaim_parameters.yaml
